記録一覧ページの作成

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Records#index</h1>
-<p>Find me in app/views/records/index.html.erb</p>
+<h1>わたしのはじめてリスト</h1>
+
+<% @records.each do |record| %>
+  <div>
+    <h2><%= record.title %></h2>
+    <p><%= record.memo %></p>
+    <p><%= record.date.strftime('%Y-%m-%d') %></p>
+    <%= link_to '編集', edit_record_path(record) %> |
+    <%= link_to '削除', record_path(record), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %>
+  </div>
+<% end %>
+
+<%= link_to '新たにはじめてを刻む', new_record_path %>
