--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,17 +12,22 @@
 
 <%= form_with model: @user, local: true do |f| %>
   <div>
-    <%= f.label :email %><br>
+    <%= f.label :name, '名前' %><br>
+    <%= f.text_field :name %>
+  </div>
+
+  <div>
+    <%= f.label :email, 'メールアドレス' %><br>
     <%= f.text_field :email %>
   </div>
 
   <div>
-    <%= f.label :password %><br>
+    <%= f.label :password, 'パスワード' %><br>
     <%= f.password_field :password %>
   </div>
 
   <div>
-    <%= f.label :password_confirmation %><br>
+    <%= f.label :password_confirmation, 'パスワード確認' %><br>
     <%= f.password_field :password_confirmation %>
   </div>
 
