--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,3 +1,9 @@
-<h1>はじめてを刻む</h1>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="mx-auto w-full">
+    <h1 class="my-10 text-center text-2xl font-bold">はじめてを刻む</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
+
+    <%= link_to '戻る', records_path, class: 'btn btn-primary btn-outline mx-auto mb-10 w-full' %>
+  </div>
+</div>
