--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,29 @@
-<h1>「生まれて初めて」を記録しよう</h1>
+<div class="hero bg-base-200 min-h-screen">
+  <div class="hero-content text-center">
+    <div class="max-w-5xl">
+      <h1 class="text-5xl font-bold py-6">「生まれてはじめて」を記録しよう</h1>
 
-<p>
-  毎日、小さなことでも「生まれて初めて」の体験があるはずです。そんな小さな"初めて"を記録することで、日々の生活を豊かにし、人生を彩りましょう。
-</p>
+      <p class="py-3">
+        毎日、小さなことでも「生まれてはじめて」の体験があるはずです。
+      </p>
 
-<p>
-  私たちが体験する「初めて」の積み重ねは、やがて大きな成長へとつながります。どんなに些細なことでも、きっとあなたの人生の肥やしになるはずです。体は痩せたいけど、人生はいっぱい太らせたいですよね。
-</p>
+      <p class="py-3">
+        そんな小さな「はじめて」を記録することで、日々の生活を豊かにし、人生を彩りましょう。
+      </p>
 
-<p>
-  さあ、今日からあなたの「生まれて初めてリスト」を始めてみませんか？
-</p>
+      <p class="py-3">
+        私たちが体験する「はじめて」の積み重ねは、やがて大きな成長へとつながります。
+      </p>
 
-<div>
-  <%= link_to '今すぐ始める', signup_path, class: 'btn btn-primary' %>
+      <p class="py-3">
+        どんなに些細なことでも、きっとあなたの人生の肥やしになるはずです。
+      </p>
+
+      <p class="py-3">
+        さあ、今日からあなたの「生まれてはじめて」を記録していきませんか？
+      </p>
+
+      <%= link_to '今すぐ始める', signup_path, class: 'btn btn-primary my-6' %>
+    </div>
+  </div>
 </div>
-
