--- a/app/views/public_records/index.html.erb
+++ b/app/views/public_records/index.html.erb
@@ -1,9 +1,16 @@
-<h1>みんなのはじめて</h1>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="mx-auto w-full">
+    <h1 class="my-10 text-center text-2xl font-bold">みんなのはじめて</h1>
 
-<% @public_records.each do |record| %>
-  <div>
-    <h2><%= record.title %></h2>
-    <p><%= record.date %></p>
-    <p>投稿者: <%= record.user.name %></p>
+    <% @public_records.each do |record| %>
+      <div class="card bg-cyan-50 w-full border mx-auto">
+        <div class="card-body">
+          <p><%= record.user.name %></p>
+          <h2 class="card-title"><%= record.title %></h2>
+          <p><%= record.memo %></p>
+          <p><%= record.date.strftime('%Y-%m-%d') %></p>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
