--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,37 +1,41 @@
-<h1>ユーザー登録</h1>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <h1 class="my-10 text-center text-2xl font-bold">ユーザー登録</h1>
 
-<% if @user.errors.any? %>
-  <div>
-    <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+    <% if @user.errors.any? %>
+      <div>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-<%= form_with model: @user, local: true do |f| %>
-  <div>
-    <%= f.label :name, '名前' %><br>
-    <%= f.text_field :name %>
-  </div>
+    <%= form_with model: @user, local: true do |f| %>
+      <div>
+        <%= f.label :name, 'ユーザー名', class: 'my-2' %><br>
+        <%= f.text_field :name, class: 'my-2 input input-bordered w-full' %>
+      </div>
 
-  <div>
-    <%= f.label :email, 'メールアドレス' %><br>
-    <%= f.text_field :email %>
-  </div>
+      <div>
+        <%= f.label :email, 'メールアドレス', class: 'my-2' %><br>
+        <%= f.text_field :email, class: 'my-2 input input-bordered w-full' %>
+      </div>
 
-  <div>
-    <%= f.label :password, 'パスワード' %><br>
-    <%= f.password_field :password %>
-  </div>
+      <div>
+        <%= f.label :password, 'パスワード', class: 'my-2' %><br>
+        <%= f.password_field :password, class: 'my-2 input input-bordered w-full' %>
+      </div>
 
-  <div>
-    <%= f.label :password_confirmation, 'パスワード確認' %><br>
-    <%= f.password_field :password_confirmation %>
-  </div>
+      <div>
+        <%= f.label :password_confirmation, 'パスワード確認', class: 'my-2' %><br>
+        <%= f.password_field :password_confirmation, class: 'my-2 input input-bordered w-full' %>
+      </div>
 
-  <div>
-    <%= f.submit "登録" %>
+      <div>
+        <%= f.submit "登録", class: 'btn btn-primary my-5 w-full' %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
