--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,12 @@
 
     <%= yield :head %>
 
-    <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="<%= asset_path 'favicon.png' %>" type="image/png">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <%= favicon_link_tag 'favicon.png' %> <!-- ファビコンタグ -->
+    <link rel="apple-touch-icon" href="<%= asset_path 'icon.png' %>"> <!-- Apple Touch Icon -->
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= display_meta_tags(default_meta_tags) %> <!-- Meta Tags -->
   </head>
 
   <body>
