_header_logged_out.html.erb を更新
ログイン・サインアップボタンのサイズをレスポンシブ対応

--- a/app/views/shared/_header_logged_out.html.erb
+++ b/app/views/shared/_header_logged_out.html.erb
@@ -37,8 +37,9 @@
     <!-- ボタン -->
     <div class="navbar-end">
       <ul class="menu menu-horizontal px-1">
-        <li><%= link_to 'ログイン', login_path, class: 'btn btn-primary mx-2' %></li>
-        <li><%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary mx-2' %></li>
+        <li><%= link_to 'ログイン', login_path, class: 'btn btn-primary mx-2 lg:btn-md btn-xs' %></li>
+        <li><%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary mx-2 lg:btn-md btn-xs' %></li>
+      </ul>
     </div>
   </div>
 </header>
