--- a/app/views/shared/_header_logged_out.html.erb
+++ b/app/views/shared/_header_logged_out.html.erb
@@ -35,11 +35,9 @@
     </div>
 
     <!-- ボタン -->
-    <div class="navbar-end">
-      <ul class="menu menu-horizontal px-1">
-        <li><%= link_to 'ログイン', login_path, class: 'btn btn-primary mx-2 lg:btn-md btn-xs' %></li>
-        <li><%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary mx-2 lg:btn-md btn-xs' %></li>
-      </ul>
+    <div class="navbar-end flex items-center">
+      <li><%= link_to 'ログイン', login_path, class: 'btn btn-primary lg:btn-md btn-xs' %></li>
+      <li><%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary ml-2 lg:btn-md btn-xs' %></li>
     </div>
   </div>
 </header>
