_header_logged_out.html.erb を更新

--- a/app/views/shared/_header_logged_out.html.erb
+++ b/app/views/shared/_header_logged_out.html.erb
@@ -36,8 +36,8 @@
 
     <!-- ボタン -->
     <div class="navbar-end flex items-center">
-      <li><%= link_to 'ログイン', login_path, class: 'btn btn-primary lg:btn-md btn-xs' %></li>
-      <li><%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary ml-2 lg:btn-md btn-xs' %></li>
+      <%= link_to 'ログイン', login_path, class: 'btn btn-primary lg:btn-md btn-xs' %>
+      <%= link_to 'サインアップ', signup_path, class: 'btn btn-secondary ml-2 lg:btn-md btn-xs' %>
     </div>
   </div>
 </header>
