_header_logged_in.html.erb を更新
ロゴのテキストサイズ調整

--- a/app/views/shared/_header_logged_in.html.erb
+++ b/app/views/shared/_header_logged_in.html.erb
@@ -26,7 +26,7 @@
         </ul>
       </div>
       <!-- ロゴ部分 -->
-      <%= link_to 'For The First Time', root_path, class: 'btn btn-ghost text-xl' %>
+      <%= link_to 'For The First Time', root_path, class: 'btn btn-ghost lg:text-xl text-sm' %>
     </div>
 
     <!-- ラージスクリーンでのメニュー -->
