--- a/app/views/shared/_record_card.html.erb
+++ b/app/views/shared/_record_card.html.erb
@@ -1,6 +1,9 @@
-<div class="card bg-fuchsia-50 w-full border mx-auto my-5">
+<div class="card bg-fuchsia-50 text-primary-content w-full border mx-auto my-5">
   <div class="card-body">
-    <h2 class="card-title"><%= record.title %></h2>
+    <h2 class="card-title">
+      <div class="text-sm text-slate-500">生まれてはじめて</div>
+      <div class=""><%= record.title %></div>
+    </h2>
 
     <p><%= record.memo %></p>
 
@@ -10,6 +13,8 @@
       <div class="card-actions justify-end">
         <%= link_to '編集', edit_record_path(record), class: 'btn btn-info btn-outline btn-sm' %>
         <%= link_to '削除', record_path(record), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-error btn-outline btn-sm' %>
+
+        <%= link_to 'Xでシェア', "https://twitter.com/share?url=#{request.original_url}&text=#{CGI.escape(tweet_text(record))}", target: '_blank', rel: 'noopener noreferrer', class: 'btn btn-outline btn-sm' %>
       </div>
     <% end %>
   </div>
