--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,8 +1,8 @@
-<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<div class="flex min-h-full flex-col justify-center px-10 py-10 lg:px-8">
   <div class="mx-auto w-full">
-    <h1 class="my-10 text-center text-2xl font-bold">わたしのはじめて</h1>
+    <h1 class="my-16 text-center text-2xl font-bold">わたしのはじめて</h1>
 
-    <%= link_to '新たにはじめてを刻む', new_record_path, class: 'btn btn-primary mx-auto my-10' %>
+    <%= link_to '新たにはじめてを刻む', new_record_path, class: 'btn btn-primary mx-auto mb-5' %>
 
     <% @records.each do |record| %>
       <%= render 'shared/record_card', record: record %>
