--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="mx-auto w-full">
+    <h1 class="my-10 text-center text-2xl font-bold">プロフィール</h1>
+
+    <div class="card bg-base-100 border shadow p-4">
+      <div class="my-2 flex items-center">
+        <p class="mx-3 badge badge-outline">ユーザー名</p>
+        <p><%= @profile.name %></p>
+      </div>
+      <div class="my-2 flex items-center">
+        <p class="mx-3 badge badge-outline">メールアドレス</p>
+        <p><%= @profile.email %></p>
+      </div>
+
+      <%= link_to 'プロフィール編集', edit_profile_path, class: 'btn btn-primary m-3' %>
+    </div>
+
+    <div class="card bg-base-100 border shadow p-4 my-10">
+      <h2 class="my-5 text-center text-xl font-bold">わたしのはじめて</h2>
+      <% if @profile.records.any? %>
+        <% @profile.records.each do |record| %>
+          <%= render 'shared/record_card', record: record %>
+        <% end %>
+      <% else %>
+        <p>まだ記録がありません。</p>
+      <% end %>
+    </div>
