--- a/app/views/shared/_header_logged_in.html.erb
+++ b/app/views/shared/_header_logged_in.html.erb
@@ -45,6 +45,7 @@
           <%= current_user.name %>
         </div>
         <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+          <li><%= link_to 'プロフィール', profile_path(current_user.id) %></li>
           <li><%= link_to 'ログアウト', logout_path, method: :delete, data: { turbo_method: :delete }, class: 'text-error' %></li>
         </ul>
       </div>
