--- a/app/views/shared/_record_card.html.erb
+++ b/app/views/shared/_record_card.html.erb
@@ -10,6 +10,10 @@
     <p><%= record.date.strftime('%Y-%m-%d') %></p>
 
     <div class="card-actions justify-end">
+      <%= turbo_frame_tag "like_button_record_#{record.id}" do %>
+        <%= render 'likes/like_buttons', record: record %>
+      <% end %>
+
       <% if logged_in? && current_user == record.user %> <!-- ユーザーが投稿の所有者の場合にのみ表示 -->
         <%= link_to '編集', edit_record_path(record), class: 'btn btn-info btn-outline btn-sm' %>
         <%= link_to '削除', record_path(record), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-error btn-outline btn-sm' %>
