Turbo Streamテンプレートがいいねの数を更新するように修正

--- a/app/views/likes/destroy.turbo_stream.erb
+++ b/app/views/likes/destroy.turbo_stream.erb
@@ -1,3 +1,9 @@
+<!-- いいねボタンを更新 -->
 <%= turbo_stream.update "like_button_record_#{@record.id}" do %>
   <%= render partial: 'likes/unliked_button', locals: { record: @record } %>
+<% end %>
+
+<!-- いいね数を更新 -->
+<%= turbo_stream.update "like_count_record_#{@record.id}" do %>
+  <%= render partial: 'likes/like_count', locals: { record: @record } %>
 <% end %>
